# wasm_image_compressor

./: .gitignore  app.vue  build-wasm.js  package-lock.json  package.json  update.js
composables/: useImage.ts
plugins/: wasm.client.ts
wasm/: Cargo.toml
wasm/pkg/: package.json
wasm/pkg/lib/: index.d.ts  index.js  index_bg.wasm  index_bg.wasm.d.ts
wasm/src/: compression.rs  lib.rs
