[package]
name = "wasm_image_compressor"
version = "1.5.0"
edition = "2021"
description = "wasm_image_compressor"
authors = ["Daniele Falchetti <danielefalche@gmail.com>"]
license = "MIT"
repository = "https://github.com/falcosan/wasm_image_compressor"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "2"
pixlzr = "0.3.1"
image = "0.25.5"
kamadak-exif = "0.6"
rayon = "1.10.0"
js-sys = "0.3.77"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1", default-features = false }
gloo-utils = { version = "0.2.0", features = ["serde"] }
web-sys = { version = "0.3", features = [
  "Url",
  "Blob",
  "BlobPropertyBag",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
] }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
